# flashloan

./: .env.example  .gitignore  .vercelignore  Anchor.toml  CHANGELOG.md  Cargo.toml  DEPLOYMENT.md  QUICKSTART.md  README.md  SECURITY_ADVISORY.md  TRANSFORMATION_SUMMARY.md  foundry.toml  hardhat.config.js  hardhat.config.ts  package-lock.json  package.json  vercel.json
.github/workflows/: main.yml
audit/: baseline.json  diff-report.md  pr-status.md
backend/: config.js  database.js  index.js  jest.config.json  network-optimizer.js  package.json  solana.js  validation.js
backend/integrations/: blinks.js  jupiter.js
backend/tests/: api.test.js
bot/evm/: README.md  config.js  executor.js  flashbots.js  index.js  package-lock.json  package.json  scanner.js  simulator.js
config/: networks.json  tokens.json
contracts/: FlashloanArbitrage.sol
contracts/interfaces/: IArbitrage.sol
desktop-admin/: index.html  package.json
desktop-admin/src/: App.css  App.jsx  KeyUnlock.css  KeyUnlock.jsx  keyStorage.js
desktop-admin/src-tauri/: Cargo.toml  tauri.conf.json
desktop-admin/src-tauri/src/: main.rs
docs/: API.md  ARCHITECTURE.md  SETUP.md  TESTING.md  TEST_RESULTS.md
docs/screenshots/: admin-placeholder.md  dashboard-placeholder.md  heatmap-placeholder.md  timeline-placeholder.md  workflow-placeholder.md
frontend/: jest.config.json  jest.setup.js  next.config.js  package.json  tsconfig.tsbuildinfo
programs/flashloan-arbitrage/: Cargo.toml
programs/flashloan-arbitrage/src/: lib.rs
scripts/: deploy.sh  dev.sh  setup-env.sh  stop.sh
(+100 files in other folders)
