[package]
name = "flashloan-admin"
version = "2.0.0"
description = "Solana Flashloan Arbitrage Admin Desktop App"
authors = ["SMSDAO"]
license = "MIT"
repository = "https://github.com/SMSDAO/flashloan"
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6", features = [
  "dialog-all",
  "fs-all",
  "path-all",
  "process-all",
  "shell-open",
  "window-all",
  "system-tray",
  "updater"
] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
