[package]
name = "flashloan-arbitrage"
version = "0.1.0"
description = "Solana Flashloan Arbitrage Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "flashloan_arbitrage"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
solana-program = "1.18.0"
spl-token = "4.0.0"
spl-associated-token-account = "2.3.0"

[dev-dependencies]
solana-program-test = "1.18.0"
solana-sdk = "1.18.0"
